---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 28. 01. 2024
  Info:
    - Made some migrations in mod files to be more compatible with other mods.
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 26. 01. 2024
  Info:
    - Fixed bug where increased powerpack fuel value was not being applied to higher tier powerpacks.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 25. 01. 2024
  Info:
    - Fixed bug where turning off PowerPack decay in mod settings would stop Factorio loading when SE was active.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 24. 01. 2024
  Info:
    - Added compatibility for the Space Exploration mod. All researches and most recipes will be updated if you have the mod active.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 13. 01. 2024
  Info:
    - This is a bigger update, with new features, balancing and quality of life changes from hours of play testing.
    - Added three new researches: Acceleration Train Powerpack, Speed Train Powerpack and Efficiency Train Powerpack.
    - Each research unlocks a new experimental powerpack that has its own unique properties. They can be charged at the experimental charging station and refurbished at a chemical plant.
    - As a result of this, you can now select the recipes in Experimental Train Powerpack Charging Stations. (Your old stations will still work, and you won't need to select the recipe again)
  Features:
    - Speed Train Powerpack: This powerpack has a higher top speed than the regular powerpack, but has a lower acceleration and fuel efficiency.