@@ -3,6 +3,7 @@ Version: 0.2.4
 Date: 28. 01. 2024
   Info:
     - Made some migrations in mod files to be more compatible with other mods.
+    - Electric fluid wagon now appears before the artillery wagon (next to vanilla fluid wagon) in the crafting menu.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.3
 Date: 26. 01. 2024
